Added new files

--- a/practise.ipynb
+++ b/practise.ipynb
@@ -846,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "87ecb3bb",
    "metadata": {},
    "outputs": [
@@ -915,6 +915,232 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "18c8ca7b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "def vadd(a,b):\n",
+    "    result = a+b\n",
+    "    print(result)\n",
+    "vadd(3,7) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "1b8ef5b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello, shadi\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Greeting : write a function that takes a name as input and returns a greeting messages\n",
+    "vname = input(\"Enter your name :\")\n",
+    "\n",
+    "def greet(name) :\n",
+    "    message = f\"hello, {name}\"\n",
+    "    print(message)\n",
+    "\n",
+    "greet(vname)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1aecffbe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Addition Function : Create a function that adds two numbers and return the result.\n",
+    "def addv(a,b) :\n",
+    "    resultc = a+b\n",
+    "    print(resultc)\n",
+    "\n",
+    "addv(10,5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "a85345d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Write a function greet() that prints “Hello, World!”.\n",
+    "# 1. Greet function\n",
+    "def greet():\n",
+    "    print(\"Hello, World!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "b6fa9185",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Write a function add(a, b) that returns the sum of two numbers.\n",
+    "# 2. Add two numbers\n",
+    "def add4(a, b) :\n",
+    "    return a + b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e483152",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Write a function square(num) that returns the square of a number.\n",
+    "# 3. Square of a number\n",
+    "def square(num):\n",
+    "    return num ** 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "058a5419",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Write a function is_even(num) that returns True if the number is even, otherwise False.\n",
+    "# 4. Check even number\n",
+    "def is_even(num):\n",
+    "    return num % 2 == 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f2bd2f58",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Write a function max_of_two(a, b) that returns the larger of the two numbers.\n",
+    "# 5. Maximum of two numbers\n",
+    "def max_of_two(a, b):\n",
+    "    return a if a > b else b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af07c307",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Write a function fahrenheit_to_celsius(f) that converts Fahrenheit to Celsius.\n",
+    "# 6. Fahrenheit to Celsius\n",
+    "def fahrenheit_to_celsius(f):\n",
+    "    return (f - 32) * 5 / 9"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a1f4aefa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Write a function print_table(n) that prints the multiplication table of n.\n",
+    "\n",
+    "# 7. Multiplication table\n",
+    "def print_table(n):\n",
+    "    for i in range(1, 11):\n",
+    "        print(f\"{n} x {i} = {n * i}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "b7cbfa96",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Write a function greet_user() that prints “Welcome to Python!”\n",
+    "def greet_user(namea) :\n",
+    "    messagea = f\"welcome to python\"\n",
+    "    print(messagea)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "7122c2de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Write a function add(a, b) that returns the sum of two numbers.\n",
+    "def AAD(d, c) :\n",
+    "    return(d + c)\n",
+    "    print(4, 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "c696d582",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Write a function subtract(a, b) that returns the difference between two numbers.\n",
+    "def subtract(a, b) :\n",
+    "    return(a - b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "a5363bb1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Write a function multiply(a, b) that returns the product of two numbers.\n",
+    "def multiply(e, f) :\n",
+    "    return(e * f)\n",
+    "    print(5, 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "d886f356",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Write a function divide(a, b) that returns the quotient (handle divide-by-zero).\n",
+    "def divide(a1, b1) :\n",
+    "    return(a1 % b1)\n",
+    "    print(2,7)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71580748",
    "metadata": {},
    "outputs": [],
    "source": []
